<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="about_dialog">"© Bitstrips Inc. 

Bitmoji v%1$s"</string>
    <string name="age_restriction_dialog_message">"Sorry, looks like you're not eligible for Bitmoji... but thanks for checking us out!"</string>
    <string name="cancel">Cancel</string>
    <string name="change_style">Change Avatar Style</string>
    <string name="edit_avatar">Edit Your Avatar</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="gboard_onboarding_instruct_bitmoji_tab">Tap the Bitmoji tab</string>
    <string name="gboard_onboarding_instruct_desc">How to use Bitmoji in Gboard:</string>
    <string name="gboard_onboarding_instruct_pick">Pick a Bitmoji to send!</string>
    <string name="gboard_onboarding_instruct_stickers">Tap the emoji button</string>
    <string name="gboard_onboarding_instruct_title">Instructions</string>
    <string name="gboard_onboarding_intro_title">Bitmoji for Gboard</string>
    <string name="gboard_onboarding_skip">Skip</string>
    <string name="gboard_setup">Gboard Setup</string>
    <string name="keyboard_get_gboard">GET GBOARD</string>
    <string name="keyboard_later">Later</string>
    <string name="keyboard_show_me_how">SHOW ME HOW</string>
    <string name="keyboard_sunset_desc">"We've teamed up with Google to bring you a better keyboard: Send Bitmojis in a tap and easily find your faves with Google Search!"</string>
    <string name="last_name">Last Name</string>
    <string name="licenses">Licenses</string>
    <string name="logout">Log Out</string>
    <string name="no_thanks">No Thanks</string>
    <string name="outfit_builder">Fashion Mall</string>
    <string name="password">Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_and_review">Rate &amp; Review</string>
    <string name="rate_bitmoji_message">If you love using Bitmoji, please consider rating us on Google Play.</string>
    <string name="rate_bitmoji_title">Rate Bitmoji</string>
    <string name="rate_now">Rate Now</string>
    <string name="remind">Remind Me</string>
    <string name="reset_avatar">Reset Avatar</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_disclaimer">By tapping Sign Up, you agree to the &lt;a href=%1$s>Terms of Service&lt;/a> and &lt;a href=%2$s>Privacy Policy&lt;/a>.</string>
    <string name="support">Support</string>
    <string name="terms">Terms of Service</string>
    <string name="terms_changed_accept">Accept</string>
    <string name="terms_changed_accept_terms">By tapping Accept, you agree to the&lt;br/>&lt;a href=%1$s>Terms of Service&lt;/a> and &lt;a href=%2$s>Privacy Policy&lt;/a></string>
    <string name="terms_changed_log_out">Log Out</string>
    <string name="terms_changed_title">"We've updated our Terms of Service and Privacy Policy"</string>
    <string name="v3_terms_changed_content_line1">• For users in the US, our Terms of Service will now be between you and Snap Inc.</string>
    <string name="v3_terms_changed_content_line2">• For users outside of the US, the agreement will now be between you and Snap Group Limited in the UK.</string>
    <string name="v3_terms_changed_content_line3">"• In the Terms for users outside of the US, we've revised some of the provisions about how disputes between us will be worked out."</string>
    <string name="v3_terms_changed_content_line4">• Because Bitstrips is part of the Snap Inc. family, the Snap Inc. Privacy Policy will now apply.</string>
    <string name="v3_terms_changed_subtitle">"Please read both to make sure you understand the changes that may be important to you! To get you started, here are a few of the changes you'll find:"</string>
    <string name="terms_of_use_filename">https://www.bitmoji.com/support/terms.html</string>
    <string name="abv3_filter_option_traits">abv3_filter_option_traits</string>
    <string name="abv3_launch_test">abv3_launch_test</string>
    <string name="abv3_preload_adjacent">abv3_preload_adjacent</string>
    <string name="abv3_preload_adjacent_title">Preload adjacent categories</string>
    <string name="abv3_svg_preview">abv3_svg_preview</string>
    <string name="app_features_title">Misc Features</string>
    <string name="avatar_builder_title">Avatar Builder</string>
    <string name="avatar_id_key">avatar_id_key</string>
    <string name="bigger_selfie_enable">Enable Bigger selfie</string>
    <string name="bigger_selfie_enable_key">bigger_selfie_enable_key</string>
    <string name="change_style_pref">change_style_pref</string>
    <string name="cm_default">cm_default</string>
    <string name="cm_default_title">Set CM default</string>
    <string name="enable_abv3_svg_preview_title">Use SVG preview</string>
    <string name="enable_analytics_debug_key">enable_analytics_debug_key</string>
    <string name="enable_analytics_debug_title">Enable Analytics Debug</string>
    <string name="enable_app_indexing">enable_app_indexing</string>
    <string name="enable_app_indexing_period">enable_app_indexing_period</string>
    <string name="enable_app_indexing_period_title">App Indexing Period In Hours</string>
    <string name="enable_app_indexing_title">Enable App Indexing</string>
    <string name="enable_cm_save_prod">enable_cm_save_prod</string>
    <string name="enable_cm_save_title">(DO NOT ENABLE) Enable saving CM Prod</string>
    <string name="enable_monouser_login">Enable Mono User Login</string>
    <string name="enable_monouser_login_key">enable_monouser_login_key</string>
    <string name="enable_sign_up_button_key">enable_sign_up_button_key</string>
    <string name="enable_sign_up_button_title">Enable Sign Up Button</string>
    <string name="face_recognition_enable_ratio">Face recognition enable ratio</string>
    <string name="face_recognition_enable_ratio_key">face_recognition_enable_ratio_key</string>
    <string name="fake_gboard_dev_intent_title">Send fake Gboard Dev Intent</string>
    <string name="fake_gboard_intent_title">Send fake Gboard Intent</string>
    <string name="filter_abv3_options_traits">Filter traits in options images</string>
    <string name="full_screen_upgrade_teaser_enabled">Full Screen Upgrade Teaser Enabled</string>
    <string name="gboard_storage_required_key">gboard_storage_required_key</string>
    <string name="gboard_storage_required_title">Force Additional Storage Required for Gboard</string>
    <string name="launch_abv3_test_mode">Launch avatar builder in test mode</string>
    <string name="launch_terms_changed_key">launch_terms_changed</string>
    <string name="launch_terms_changed_title">Launch Terms Changed</string>
    <string name="licenses_filename">https://www.bitmoji.com/licenses/android.html</string>
    <string name="licenses_pref">licenses_pref</string>
    <string name="logcat_post_request_bodies">Logcat POST request bodies</string>
    <string name="logcat_post_request_bodies_key">logcat_post_request_bodies_key</string>
    <string name="logout_pref">logout_pref</string>
    <string name="mirror_geo_ip_override">Override mirror geo ip validation</string>
    <string name="mirror_geo_ip_override_key">mirror_geo_ip_override_key</string>
    <string name="mirror_save_ratio">Mirror save ratio</string>
    <string name="mirror_save_ratio_key">mirror_save_ratio_key</string>
    <string name="monouser_configure_accounts_endpoint_title">Configure Accounts Endpoint</string>
    <string name="monouser_force_login_failure_key">monouser_force_login_failure_key</string>
    <string name="monouser_force_token_refresh">Force Token Refresh</string>
    <string name="monouser_force_token_refresh_key">monouser_force_token_refresh_key</string>
    <string name="monouser_force_web_login">Force Web Login</string>
    <string name="monouser_force_web_login_failure">Force Web Login Failure</string>
    <string name="monouser_force_web_login_key">monouser_force_web_login_key</string>
    <string name="monouser_title">Mono User</string>
    <string name="package_name">com.bitstrips.imoji</string>
    <string name="privacy_policy_filename">https://www.snap.com/privacy/privacy-policy</string>
    <string name="privacy_policy_pref">privacy_policy_pref</string>
    <string name="reset_avatar_pref">reset_avatar_pref</string>
    <string name="terms_of_use_pref">terms_of_use_pref</string>
    <string name="token_refresh_intent_title">Get 401 response to force token refresh</string>
    <string name="upgrade_teaser_enabled_key">upgrade_teaser_enabled_key</string>
</resources>