<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/sign_up_form" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_margin" android:layout_marginRight="@dimen/activity_margin" android:layout_marginBottom="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.bitstrips.imoji.ui.views.FormField android:id="@id/first_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sign_up_form_margin_top" android:hint="@string/first_name" android:drawableLeft="@drawable/ic_user_selector" android:inputType="textCapWords|textNoSuggestions" />
        <com.bitstrips.imoji.ui.views.FormField android:id="@id/last_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/last_name" android:drawableLeft="@drawable/ic_user_selector" android:inputType="textCapWords|textNoSuggestions" />
        <com.bitstrips.imoji.ui.views.FormField android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email_address" android:drawableLeft="@drawable/ic_mail_selector" android:inputType="textEmailAddress" />
        <com.bitstrips.imoji.ui.views.FormField android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password" android:password="true" android:drawableLeft="@drawable/ic_key_selector" android:inputType="textPassword" />
        <com.bitstrips.imoji.ui.views.BmTextView android:textSize="13.0dip" android:gravity="center" android:id="@id/sign_up_disclaimer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/sign_up_disclaimer" />
        <com.bitstrips.imoji.ui.views.BmButton android:enabled="false" android:textStyle="bold" android:textColor="@drawable/sign_up_submit_button_text" android:id="@id/submit" android:layout_width="fill_parent" android:layout_marginTop="@dimen/sign_up_submit_button_top_margin" android:text="@string/sign_up" style="@style/AppTheme.Button2" />
    </LinearLayout>
</ScrollView>