<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/bottom_accept" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_legal_text_size" android:textColor="@color/terms_changed_text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/legal" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/terms_changed_legal_margin_vertical" android:layout_marginBottom="@dimen/terms_changed_legal_margin_vertical" android:text="@string/terms_changed_accept_terms" />
        <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_accept_text_size" android:textStyle="bold" android:textColor="@android:color/white" android:gravity="center" android:id="@id/accept_button" android:background="@color/imoji_primary" android:layout_width="fill_parent" android:layout_height="@dimen/terms_changed_accept_height" android:text="@string/terms_changed_accept" />
    </LinearLayout>
    <View android:background="@drawable/terms_bottom_gradient" android:layout_width="fill_parent" android:layout_height="10.0dip" android:layout_above="@id/bottom_accept" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/bottom_accept">
        <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/terms_changed_content_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/terms_changed_content_margin_side" android:layout_marginRight="@dimen/terms_changed_content_margin_side">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="?actionBarSize">
                <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_log_out_text_size" android:textStyle="bold" android:textColor="?colorPrimary" android:layout_gravity="center|right" android:id="@id/logout_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_changed_log_out" />
            </FrameLayout>
            <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_title_text_size" android:textStyle="bold" android:textColor="@color/terms_changed_text_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/terms_changed_title_margin_side" android:layout_marginTop="@dimen/terms_changed_title_margin_top" android:layout_marginRight="@dimen/terms_changed_title_margin_side" android:text="@string/terms_changed_title" />
            <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_content_text_size" android:textStyle="bold" android:textColor="@color/terms_changed_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/terms_change_subtitle_margin_top" android:text="@string/v3_terms_changed_subtitle" />
            <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_content_text_size" android:textColor="@color/terms_changed_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/terms_changed_content_margin_top" android:text="@string/v3_terms_changed_content_line1" />
            <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_content_text_size" android:textColor="@color/terms_changed_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/terms_changed_content_margin_top" android:text="@string/v3_terms_changed_content_line2" />
            <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_content_text_size" android:textColor="@color/terms_changed_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/terms_changed_content_margin_top" android:text="@string/v3_terms_changed_content_line3" />
            <com.bitstrips.imoji.ui.views.BmTextView android:textSize="@dimen/terms_changed_content_text_size" android:textColor="@color/terms_changed_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/terms_changed_content_margin_top" android:text="@string/v3_terms_changed_content_line4" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>